--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,7 +7,7 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 html {
-  scroll-behavior: smooth;
+	scroll-behavior: smooth;
 }
 
 html,
@@ -127,7 +127,7 @@ body.loaded #page-wrapper {
 }
 
 .spacer {
-	padding-top:2em;
+	padding-top: 2em;
 }
 
 #subtitle {
@@ -145,20 +145,20 @@ body.loaded #page-wrapper {
 
 /*controlling article properties*/
 .article {
-  opacity: 1;
-  transform: translateY(0);
-  transition: opacity 0.5s ease, transform 0.5s ease;
-  max-height: 1000px; 
-  overflow: hidden;
+	opacity: 1;
+	transform: translateY(0);
+	transition: opacity 0.5s ease, transform 0.5s ease;
+	max-height: 1000px;
+	overflow: hidden;
 }
 
 .article.hidden {
-  opacity: 0;
-  transform: translateY(20px);
-  max-height: 0;
-  padding: 0;
-  margin: 0;
-  pointer-events: none;
+	opacity: 0;
+	transform: translateY(20px);
+	max-height: 0;
+	padding: 0;
+	margin: 0;
+	pointer-events: none;
 }
 
 
@@ -182,12 +182,12 @@ body.loaded #page-wrapper {
 }
 
 #logo .logo-icon {
-	height: 3.5em;
+	height: 4em;
 	width: auto;
 	vertical-align: middle;
-	margin-right: 2.5em;
+	margin-right: 0em;
 	/* space between image and text */
-	margin-left: -3em;
+	margin-left: 0em;
 }
 
 .logo-divider {
@@ -203,7 +203,7 @@ body.loaded #page-wrapper {
 	margin: 0em auto;
 	background: #f1f1f1;
 	font-size: 1em;
-	color:#1D1616;
+	color: #1D1616;
 	/* box-shadow: 0 0 10px rgba(0, 0, 0, 0.08);
 	border-radius: 2px; */
 }
@@ -214,22 +214,23 @@ body.loaded #page-wrapper {
 }
 
 .grey-section {
-  background-color: #f1f1f1;
-  width: 100vw;               /* Full viewport width */
-  margin: 0;
-  padding: 2em 0;           
+	background-color: #f1f1f1;
+	width: 100vw;
+	/* Full viewport width */
+	margin: 0;
+	padding: 2em 0;
 }
 
 .grey-section p {
-  /* font-family: 'Avenir', 'Helvetica Neue', sans-serif; */
-  font-weight: 400;
-  font-size: 1.15em;
-  color: #111;
-  line-height: 1.6;
-  max-width: 800px;
-  margin: 0 auto;
-  margin-bottom: 1.5em;
-  text-align: left;
+	/* font-family: 'Avenir', 'Helvetica Neue', sans-serif; */
+	font-weight: 400;
+	font-size: 1.15em;
+	color: #111;
+	line-height: 1.6;
+	max-width: 800px;
+	margin: 0 auto;
+	margin-bottom: 1.5em;
+	text-align: left;
 }
 
 .team {
@@ -246,10 +247,10 @@ body.loaded #page-wrapper {
 }
 
 .profile-image {
-  width: 100%;             
-  height: 350px;          
-  object-fit: cover;       
-  border-radius: 6px;      
+	width: 100%;
+	height: 350px;
+	object-fit: cover;
+	border-radius: 6px;
 }
 
 
@@ -383,17 +384,22 @@ h6 {
 }
 
 .article-title {
-	font-weight: 600;
+	font-family: 'Arvo';
+	font-weight: 700;
 	color: #1D1616;
-	font-size: 2em;
+	text-shadow: 0.05em 0.075em 0 rgba(0, 0, 0, 0.1);
+	font-size: 2.0em;
+	letter-spacing: 2px;
+	text-align: center;
 	margin-bottom: 0.5em;
-	letter-spacing: 0.05em;
-
 }
+
 
 #article-title {
-	margin-top: -0.25em;
+	margin-top: -0.0em;
 }
+
+
 
 h1 a,
 h2 a,
@@ -1799,10 +1805,48 @@ article:last-child {
 	width: 100%;
 }
 
+.image.featured img:hover {
+	transform: scale(1.02);
+}
+
 .image.featured {
+	height: 250px;
+	overflow: hidden;
 	display: block;
+	border-radius: 8px;
 	width: 100%;
 	margin: 0 0 1em 0;
+	transition: transform 0.3s ease;
+
+}
+
+.image.featured img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	display: block;
+}
+
+.image.aboutus img:hover {
+	transform: scale(1.02);
+}
+
+.image.aboutus {
+	height: 350px;
+	overflow: hidden;
+	display: block;
+	border-radius: 8px;
+	width: 100%;
+	margin: 0 0 1em 0;
+	transition: transform 0.3s ease;
+
+}
+
+.image.aboutus img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	display: block;
 }
 
 .image.left {
@@ -2149,7 +2193,7 @@ header>.no-sidebar .box.post {
 	font-size: 0.85em;
 	letter-spacing: 2px;
 	padding: 0.25em 1em 0.25em 1em;
-	margin: 0 0 2.5em 0;
+	margin: 0 0 1.5em 0;
 }
 
 /* Icons */
@@ -2192,7 +2236,7 @@ header>.no-sidebar .box.post {
 /* Page Wrapper */
 
 #page-wrapper>section {
-	margin-bottom: 0;
+	margin-bottom: -1.5em;
 }
 
 /* Header */
@@ -2265,8 +2309,8 @@ header>.no-sidebar .box.post {
 /* icon color */
 #nav>ul>li>a:before {
 	display: inline-block;
-	/* background: #878787; */
-	background: #476d75;
+	background: #878787;
+	/* background: #476d75; */
 	color: #e4e4e4;
 	width: 2.25em;
 	font-size: 0.8em;
