--- a/templates/contact-us.html
+++ b/templates/contact-us.html
@@ -73,7 +73,7 @@
 											<a href="#">dribbble.com/untitled</a>
 										</li>
 										<li class="icon brands fa-facebook-f">
-											<a href="#">facebook.com/untitled</a>
+											<a href="/upload">facebook.com/untitled</a>
 										</li>
 									</ul>
 								</div>
