--- a/templates/pricing/fx.html
+++ b/templates/pricing/fx.html
@@ -19,9 +19,9 @@
 	<div id="page-wrapper">
 		<!--Title-->
 		<div class="col-12" style="max-width: 100%; text-align: center;">
-			<h2 class="article-title">Regulation</h2>
+			<h2 class="article-title">FX</h2>
 		</div>
-		<!-- Features -->
+
 		<section id="features">
 			<div class="container">
 				<div class="row">
@@ -29,14 +29,11 @@
 					<div class="col-2 col-12-small">
 						<aside class="sidebar" style="padding: 20px; border-radius: 0px;">
 							<ul style="list-style: none; padding-left: 0;">
-								<li><a href="{{ url_for('regulation_html', page='market-risk-capital') }}">Market Risk Capital</a></li>
-								<li><a href="{{ url_for('regulation_html', page='credit-risk-regulation') }}">Credit Risk</a>
+								<li><a href="{{ url_for('pricing_html', page='product-fx') }}">Product</a>
+								<li><a href="{{ url_for('pricing_html', page='trading-market-fx') }}">Trading and Market</a></li>
+								<li><a href="{{ url_for('pricing_html', page='market-data-fx') }}">Market Data</a></li>
+								<li><a href="{{ url_for('pricing_html', page='valuation-model-fx') }}">Valuation Model</a></li>
 								</li>
-								<li><a href="{{ url_for('regulation_html', page='settlement-counterparty') }}">Settlement and Counterparty Risk</a></li>
-								<li><a href="{{ url_for('regulation_html', page='cva') }}">Credit Valuation Adjustment (CVA) Risk</a></li>
-								<li><a href="{{ url_for('regulation_html', page='simm') }}">SIMM</a></li>
-								<li><a href="{{ url_for('regulation_html', page='ccar') }}">CCAR</a></li>
-								<li><a href="{{ url_for('regulation_html', page='ifrs9') }}">IFRS 9</a></li>
 							</ul>
 						</aside>
 					</div>
