--- a/templates/layout.html
+++ b/templates/layout.html
@@ -33,7 +33,7 @@
     <script src="{{ url_for('static', filename='js/main.js') }}"></script>
     {% with messages = get_flashed_messages() %}
     {% if messages %}
-    <ul class="flashes">
+    <ul class="flash-message show">
         {% for message in messages %}
         <li>{{ message }}</li>
         {% endfor %}
@@ -41,6 +41,4 @@
     {% endif %}
     {% endwith %}
 </body>
-
-
 </html>
