--- a/templates/regulation/settlement-counterparty.html
+++ b/templates/regulation/settlement-counterparty.html
@@ -19,9 +19,9 @@
 	<div id="page-wrapper">
 		<!--Title-->
 		<div class="col-12" style="max-width: 100%; text-align: center;">
-			<h2 class="article-title">Regulation</h2>
+			<h2 class="article-title">Settlement and Counterparty Risk</h2>
 		</div>
-		<!-- Features -->
+
 		<section id="features">
 			<div class="container">
 				<div class="row">
@@ -29,14 +29,9 @@
 					<div class="col-2 col-12-small">
 						<aside class="sidebar" style="padding: 20px; border-radius: 0px;">
 							<ul style="list-style: none; padding-left: 0;">
-								<li><a href="{{ url_for('regulation_html', page='market-risk-capital') }}">Market Risk Capital</a></li>
-								<li><a href="{{ url_for('regulation_html', page='credit-risk-regulation') }}">Credit Risk</a>
-								</li>
-								<li><a href="{{ url_for('regulation_html', page='settlement-counterparty') }}">Settlement and Counterparty Risk</a></li>
-								<li><a href="{{ url_for('regulation_html', page='cva') }}">Credit Valuation Adjustment (CVA) Risk</a></li>
-								<li><a href="{{ url_for('regulation_html', page='simm') }}">SIMM</a></li>
-								<li><a href="{{ url_for('regulation_html', page='ccar') }}">CCAR</a></li>
-								<li><a href="{{ url_for('regulation_html', page='ifrs9') }}">IFRS 9</a></li>
+								<li><a href="{{ url_for('regulation_html', page='basel2-settlement') }}">Basel II</a></li>
+								<li><a href="{{ url_for('regulation_html', page='saccr') }}">SA-CCR</a></li>
+								<li><a href="{{ url_for('regulation_html', page='immccr') }}">IMM-CCR</a></li>
 							</ul>
 						</aside>
 					</div>
