--- a/templates/risk-management/credit-risk.html
+++ b/templates/risk-management/credit-risk.html
@@ -19,9 +19,9 @@
 	<div id="page-wrapper">
 		<!--Title-->
 		<div class="col-12" style="max-width: 100%; text-align: center;">
-			<h2 class="article-title">Regulation</h2>
+			<h2 class="article-title">Credit Risk</h2>
 		</div>
-		<!-- Features -->
+
 		<section id="features">
 			<div class="container">
 				<div class="row">
@@ -29,14 +29,14 @@
 					<div class="col-2 col-12-small">
 						<aside class="sidebar" style="padding: 20px; border-radius: 0px;">
 							<ul style="list-style: none; padding-left: 0;">
-								<li><a href="{{ url_for('regulation_html', page='market-risk-capital') }}">Market Risk Capital</a></li>
-								<li><a href="{{ url_for('regulation_html', page='credit-risk-regulation') }}">Credit Risk</a>
+								<li><a href="{{ url_for('risk_management_html', page='credit-spread-risk') }}">Credit
+										Spread Risk</a></li>
+								<li><a href="{{ url_for('risk_management_html', page='default-settlement') }}">Default
+										and Settlement Risk</a>
 								</li>
-								<li><a href="{{ url_for('regulation_html', page='settlement-counterparty') }}">Settlement and Counterparty Risk</a></li>
-								<li><a href="{{ url_for('regulation_html', page='cva') }}">Credit Valuation Adjustment (CVA) Risk</a></li>
-								<li><a href="{{ url_for('regulation_html', page='simm') }}">SIMM</a></li>
-								<li><a href="{{ url_for('regulation_html', page='ccar') }}">CCAR</a></li>
-								<li><a href="{{ url_for('regulation_html', page='ifrs9') }}">IFRS 9</a></li>
+								<li><a href="{{ url_for('risk_management_html', page='liquidity-risk-credit') }}">Liquidity
+										Risk</a>
+								</li>
 							</ul>
 						</aside>
 					</div>
