--- a/templates/risk-management/market-risk.html
+++ b/templates/risk-management/market-risk.html
@@ -18,10 +18,10 @@
 <body class="homepage is-preload">
 	<div id="page-wrapper">
 		<!--Title-->
-		<div class="col-12" style="max-width: 100%; text-align: center;">
-			<h2 class="article-title">Regulation</h2>
-		</div>
-		<!-- Features -->
+			<div class="col-12" style="max-width: 100%; text-align: center;">
+				<h2 class="article-title">Market Risk</h2>
+			</div>
+
 		<section id="features">
 			<div class="container">
 				<div class="row">
@@ -29,14 +29,9 @@
 					<div class="col-2 col-12-small">
 						<aside class="sidebar" style="padding: 20px; border-radius: 0px;">
 							<ul style="list-style: none; padding-left: 0;">
-								<li><a href="{{ url_for('regulation_html', page='market-risk-capital') }}">Market Risk Capital</a></li>
-								<li><a href="{{ url_for('regulation_html', page='credit-risk-regulation') }}">Credit Risk</a>
-								</li>
-								<li><a href="{{ url_for('regulation_html', page='settlement-counterparty') }}">Settlement and Counterparty Risk</a></li>
-								<li><a href="{{ url_for('regulation_html', page='cva') }}">Credit Valuation Adjustment (CVA) Risk</a></li>
-								<li><a href="{{ url_for('regulation_html', page='simm') }}">SIMM</a></li>
-								<li><a href="{{ url_for('regulation_html', page='ccar') }}">CCAR</a></li>
-								<li><a href="{{ url_for('regulation_html', page='ifrs9') }}">IFRS 9</a></li>
+								<li><a href="{{ url_for('risk_management_html', page='risk-sensitivities') }}">Risk Sensitivities</a></li>
+								<li><a href="{{ url_for('risk_management_html', page='vares') }}">VaR and ES</a></li>
+								<li><a href="{{ url_for('risk_management_html', page='stress-testing') }}">Stress Testing</a></li>
 							</ul>
 						</aside>
 					</div>
@@ -156,7 +151,7 @@
 					</div>
 				</div>
 			</div>
-			</dive>
+		</dive>
 	</div>
 	</section>
 
